--- a/assets/country.css
+++ b/assets/country.css
@@ -1,7 +1,10 @@
 body, html {
     height: 100%;
   }
-  
+  .btn-link.focus, .btn-link:focus, .btn-link:hover{
+    text-decoration: none!important;
+  }
+
   .bg {
     /* The image used */
     width: 100vw;
