--- a/assets/country.css
+++ b/assets/country.css
@@ -14,3 +14,52 @@ body, html {
     background-size: 100% 100%;
     background-position: center center;
   }
+
+  .card{
+    width: 350px;
+    margin: auto;
+    cursor: pointer;
+  }
+
+.nav{
+  font-size: 17px;;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  color: rgba(0, 0, 0, 0.54);
+}
+.nav>div>p{
+  margin: 0px!important;
+  width: 90%;
+  padding: 0px 0px 0px 8px;
+}
+
+.nav>div.item{
+  align-items: baseline;
+  display: flex;
+  padding: 8px 16px;
+}
+
+.card:hover{
+  background-color: #f6f6f6;
+}
+
+.nav>div:hover{
+  background-color: #ECECEC;
+}
+
+span.oi{
+  font-size: 11px!important;
+}
+
+.card-img-top{
+  height: 140px;
+  display: block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#region{
+  padding: 0px 25px;
+}
