--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,6 @@
+*{
+    font-size: 1.1rem;
+}
 table.table>thead{
     height: 90px;
 }
@@ -14,9 +17,6 @@ table#table>thead>tr>th{
 table#table>tbody>tr>td{
     vertical-align: middle;text-align: center;width: 20%;
 }
-/* table#table>tbody>tr>td:nth-child(1){
-    width:270px;height:150px;
-} */
 table#table>thead>tr>th:nth-child(2)>span,table#table>thead>tr>th:nth-child(3)>span,table#table>thead>tr>th:nth-child(4)>span{
     cursor: pointer;
 }
